@@ -1,42 +1,46 @@
-package pl.ecommerce.commons.kafka;
+package pl.ecommerce.customer.write.config;
 
-import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Primary;
+import org.springframework.context.annotation.Profile;
 import org.springframework.kafka.core.DefaultKafkaProducerFactory;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.kafka.core.ProducerFactory;
 
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
+import lombok.extern.slf4j.Slf4j;
+
 @Configuration
+@Profile("test")
 @Slf4j
-public class KafkaProducerConfig {
+public class TestKafkaConfig {
 
 	@Value("${spring.kafka.bootstrap-servers}")
 	private String bootstrapServers;
 
 	@Bean
+	@Primary
 	public ProducerFactory<String, String> producerFactory() {
 		Map<String, Object> configProps = new HashMap<>();
 		configProps.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, bootstrapServers);
 		configProps.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class);
 		configProps.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, StringSerializer.class);
-
-		configProps.put(ProducerConfig.INTERCEPTOR_CLASSES_CONFIG, List.of(
+		configProps.put(ProducerConfig.INTERCEPTOR_CLASSES_CONFIG, Arrays.asList(
 				"pl.ecommerce.commons.kafka.CustomKafkaProducerInterceptor"
 		));
-		log.debug("configProps: {}", configProps);
+		log.info("TestKafkaConfig producerFactory configProps: {}", configProps);
 		return new DefaultKafkaProducerFactory<>(configProps);
 	}
 
 	@Bean
+	@Primary
 	public KafkaTemplate<String, String> kafkaTemplate() {
 		return new KafkaTemplate<>(producerFactory());
 	}
